<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lesson5Activity" >

    <RelativeLayout
        android:id="@+id/Lesson5ControlLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    <TextView
        android:id="@+id/Lesson5TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:freezesText="false"
        android:gravity="center"
        android:linksClickable="false"
        android:longClickable="false"
        android:selectAllOnFocus="false"
        android:text="" />

    <Button
        android:id="@+id/lesson5SubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="lesson5OnSubmitClick"
        android:text="@string/lesson1ButtonSubmit" />

    <EditText
        android:id="@+id/lesson5SecretTokenEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/lesson5SubmitButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="center_vertical|bottom" android:inputType="text"/>

    <Button
        android:id="@+id/lesson5ResendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lesson5SubmitButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:onClick="lesson5OnResendClick"
        android:text="@string/lesson5ResendString" />
    </RelativeLayout>

    

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <SlidingDrawer
            android:id="@+id/slidingDrawer5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:allowSingleTap="true"
            android:content="@+id/content"
            android:handle="@+id/handle"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:rotation="180"
            android:topOffset="45dp" >

            <Button
                android:id="@+id/handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:gravity="center_vertical|center_horizontal|clip_vertical"
                android:minHeight="30sp"
                android:rotation="180"
                android:text="@string/stringInstructions"
                android:textColor="#91D685"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="306dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:rotation="180"
                    android:text="@string/lesson5Description"
                    android:textSize="20sp" />

            </LinearLayout>
        </SlidingDrawer>

    </RelativeLayout>

</RelativeLayout>